# ferreiro

./: ALPHA_RELEASE.md  BOOTSTRAP.md  CONTRIBUTING.md  Cargo.toml  PUBLISH_NOW.md  QUICKSTART.md  README.md  READY_TO_PUBLISH.txt  STATUS.md  publish.sh  publish_auto.sh
ferreiro/: Cargo.toml
ferreiro/examples/: simple_blog.rs
ferreiro/src/: lib.rs  prelude.rs
ferreiro_adapters_admin/: Cargo.toml
ferreiro_adapters_admin/src/: lib.rs
ferreiro_adapters_db/: Cargo.toml
ferreiro_adapters_db/src/: lib.rs
ferreiro_adapters_db/src/in_memory/: mod.rs
ferreiro_adapters_db/src/postgres/: mod.rs
ferreiro_adapters_db/src/sqlite/: mod.rs
ferreiro_adapters_http/: Cargo.toml
ferreiro_adapters_http/src/: lib.rs  server.rs
ferreiro_adapters_http/src/middleware/: mod.rs
ferreiro_adapters_session/: Cargo.toml
ferreiro_adapters_session/src/: cookie.rs  lib.rs  memory.rs
ferreiro_adapters_templates/: Cargo.toml
ferreiro_adapters_templates/src/: lib.rs  minijinja_adapter.rs  tera_adapter.rs
ferreiro_application/: Cargo.toml
ferreiro_application/src/services/: mod.rs  post_service.rs
ferreiro_application/tests/: post_service_test.rs
ferreiro_cli/: Cargo.toml
ferreiro_cli/src/: main.rs
ferreiro_domain/: Cargo.toml
ferreiro_domain/src/: errors.rs  events.rs  lib.rs
ferreiro_domain/src/models/: mod.rs  post.rs  user.rs
ferreiro_domain/src/ports/: driven.rs  driving.rs  mod.rs
ferreiro_domain/src/values/: email.rs  ids.rs  mod.rs  slug.rs  text.rs
