[package]
name = "ferreiro_adapters_db"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Database adapters for Ferreiro - in-memory, PostgreSQL, and SQLite implementations"

[dependencies]
ferreiro_domain = { version = "0.0.1", path = "../ferreiro_domain" }
sqlx = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
