[package]
name = "ferreiro_adapters_http"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "HTTP adapters for Ferreiro - Axum-based web server and routing"

[dependencies]
ferreiro_domain = { version = "0.0.1", path = "../ferreiro_domain" }
ferreiro_adapters_templates = { version = "0.0.1", path = "../ferreiro_adapters_templates" }
ferreiro_adapters_session = { version = "0.0.1", path = "../ferreiro_adapters_session" }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
