[package]
name = "ferreiro_adapters_templates"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Template engine adapters for Ferreiro - Tera and MiniJinja support"

[dependencies]
tera = { workspace = true, optional = true }
minijinja = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[features]
default = ["tera-engine"]
tera-engine = ["dep:tera"]
minijinja-engine = ["dep:minijinja"]
