[package]
name = "ferreiro_application"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
ferreiro_domain = { version = "0.0.1", path = "../ferreiro_domain" }
async-trait = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
ferreiro_adapters_db = { version = "0.0.1", path = "../ferreiro_adapters_db" }
tokio = { workspace = true }
