[package]
name = "ferreiro_cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "CLI tool for Ferreiro - project scaffolding and management commands"

[[bin]]
name = "ferreiro"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
tokio = { workspace = true }
dialoguer = { workspace = true }
