[package]
name = "ferreiro_domain"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Domain layer for Ferreiro - pure business logic with zero framework dependencies"

[dependencies]
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
